--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8" />
+<link rel="shortcut icon" href="https://vecr.ml/icon.jpeg" type="image/x-icon" />
 <title>[ToK] игроки</title>
 </head>
 <body>
