--- a/index.html
+++ b/index.html
@@ -123,5 +123,8 @@ style="width:100%; border-radius:5px;">
 </td>
 </tr>
 </table>
+<div>
+  <small style="color: #000; float: right;">Created by <a href="https://vecr.ml">VECR</a></small>
+</div>
 </body>
 </html>
