--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ style="width:100%; border-radius:5px;">
 </tr>
 </table>
 <div>
-  <small style="color: #000; float: center;" font-size: 12px;>Created by <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
+  <small style="color: #000; align: center; font-size: 12px;">Created by <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
 </div>
 </body>
 </html>
