--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8" />
-<link rel="shortcut icon" href="https://vecr.ml/icon.jpeg" type="image/x-icon" />
 <title>[ToK] игроки</title>
 </head>
 <body>
@@ -123,8 +122,8 @@ style="width:100%; border-radius:5px;">
 </td>
 </tr>
 </table>
-<div>
-  <small style="color: #000; text-align: center; font-size: 10px;">Created by <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
+<div align="center">
+  <small style="color: #000; font-size: 10px;">Created by <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
 </div>
 </body>
 </html>
