--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ style="width:100%; border-radius:5px;">
 </tr>
 </table>
 <div align="center">
-  <small style="color: #000; font-size: 10px;">Created by <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
+  <small style="color: #000; font-size: 10px;">Опубликовал <a href="https://vecr.ml" style="text-decoration: none; color: red;" target="new">VECR</a></small>
 </div>
 </body>
 </html>
